--- a/contrib/conf/WorldServer.conf
+++ b/contrib/conf/WorldServer.conf
@@ -80,7 +80,7 @@
 #        This message will be displayed by the server in the chat
 #        box every time any user logs on. Colors can be used in the
 #        standard WoW format.
-#        Default: "Welcome to Ascent Server"
+#        Default: "Welcome to Server"
 #
 #    Send Stats On Join
 #        This directive controls whether the server will send the online player
@@ -174,6 +174,10 @@
 #        Amount gold from start change 
 #        Default: 0
 #
+#	StartWithAllTaxiMasks
+#		This option makes players start with all taxi masks
+#		Default: 0 (Disabled)
+#
 #    CheckProfessions
 #        Warn player that he has more then 2 professions,
 #        and kick player after 3 minutes, granting time to unlearn
@@ -232,9 +236,10 @@
         DisplayFreeItems = "0"
         DualTalentPrice = "1000"
         LevelCap_Custom_All = "80"
-        LatencyKick="0"
+        LatencyKick = "0"
         LatencyKickMax = "700"
-        LatencyTimer = "120">
+        LatencyTimer = "120"
+		StartWithAllTaxiMasks = "0">
 
 #########################################################################################################
 # Power regeneration multiplier setup
@@ -326,7 +331,7 @@
 #########################################################################################################
 # GM Client Channel
 #
-#   This should be set to 'gmticket' for the Ascent-Gm-Addon to work.
+#   This should be set to 'gmticket' for the Gm-Addon to work.
 #   Default: gmticket
 #
 #########################################################################################################
@@ -589,7 +594,7 @@
 #########################################################################################################
 # Scripting Engine Setup
 #
-#    Ascent  support angels script backend via the means of loading .dll file for them.
+#    Support angels script backend via the means of loading .dll file for them.
 #    This section in the config can enable/disable the backend.
 #
 #########################################################################################################
