* changes since Feb 04, 2012

--- a/win/VC100/AuthServer.vcxproj.filters
+++ b/win/VC100/AuthServer.vcxproj.filters
@@ -73,4 +73,7 @@
       <Filter>PreCompiled</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\src\libs\icon.ico" />
+  </ItemGroup>
 </Project>
