* added method WorldSession::HandleCalendarGetCalendar * added method WorldSession::HandleCalendarGetEvent * added method WorldSession::HandleCalendarGuildFilter * added method WorldSession::HandleCalendarArenaTeam * added method WorldSession::HandleCalendarAddEvent * added method WorldSession::HandleCalendarUpdateEvent * added method WorldSession::HandleCalendarRemoveEvent * added method WorldSession::HandleCalendarCopyEvent * added method WorldSession::HandleCalendarEventInvite * added method WorldSession::HandleCalendarEventRsvp * added method WorldSession::HandleCalendarEventRemoveInvite * added method WorldSession::HandleCalendarEventStatus * added method WorldSession::HandleCalendarEventModeratorStatus * added method WorldSession::HandleCalendarComplain * added method WorldSession::HandleCalendarGetNumPending * added method uint32 secsToTimeBitFields

--- a/src/WorldServer/Makefile.am
+++ b/src/WorldServer/Makefile.am
@@ -4,6 +4,7 @@ bin_PROGRAMS = WorldServer
 WorldServer_SOURCES = \
     CollideInterface.cpp \
     CollideInterface.h \
+    VoiceChatHandler.cpp \
     DayWatcherThread.cpp \
     DayWatcherThread.h \
     ArenaTeam.cpp \
@@ -32,6 +33,7 @@ WorldServer_SOURCES = \
     BattlegroundHandler.cpp \
     BattlegroundMgr.cpp \
     BattlegroundMgr.h \
+    CalendarHandler.cpp \
     CellHandler.h \
     Channel.cpp \
     Channel.h \
