* added method StartLevel

--- a/contrib/conf/WorldServer.conf
+++ b/contrib/conf/WorldServer.conf
@@ -72,7 +72,7 @@
 #
 #    PlayerLimit
 #        This directive controls the amount of sessions that will be
-#        accepted by the server before it starts to add people to 
+#        accepted by the server before it starts to add people to
 #        the server queue.
 #        Default: 100
 #
@@ -87,7 +87,7 @@
 #        count to a client when it enters the world.
 #
 #    Breathing Setup
-#        If the breathing code is causing problems or you want to run a fun server, you can disable 
+#        If the breathing code is causing problems or you want to run a fun server, you can disable
 #        water checks by enabling this directive.
 #        Default: 1
 #
@@ -170,8 +170,12 @@
 #        each other's groups and guilds.
 #        Default: 0
 #
+#    StartLevel
+#        This is the level players start in.
+#        Default: 1
+#
 #		StartGold
-#        Amount gold from start change 
+#        Amount gold from start change
 #        Default: 0
 #
 #	StartWithAllTaxiMasks
@@ -189,13 +193,13 @@
 #        Default: 0
 #
 #    CleanDatabase
-#		 Cleans up databases which throw warnings on startup  for example
+#        Cleans up databases which throw warnings on startup  for example
 #        Trainer with invalid spell warnings which can slow down server
-#        startup times considerably, the best solution to this would 
+#        startup times considerably, the best solution to this would
 #        actually be to find a better database. That said you should
 #        only need to run this once after that you may turn it off
 #        Default: 0
-# 
+#
 #        DualTalentPrice
 #        Sets the price of Dual Talent Specialization.
 #        Default: 1000
@@ -207,7 +211,7 @@
 #########################################################################################################
 
 <Server PlayerLimit = "1000"
-        Motd = "Welcome to Server"        
+        Motd = "Welcome to Server"
         SendStatsOnJoin = "1"
         EnableBreathing = "1"
         SeperateChatChannels = "1"
@@ -229,7 +233,8 @@
         FreeGuildCharters = "0"
         Collision = "1"
         CrossFactionInteraction = "0"
-		StartGold="0"
+        StartLevel = "1"
+        StartGold = "0"
         CheckProfessions = "1"
         ForceRobesForGM = "1"
         CleanDatabase = "1"
@@ -239,16 +244,16 @@
         LatencyKick = "0"
         LatencyKickMax = "700"
         LatencyTimer = "120"
-		StartWithAllTaxiMasks = "0">
+        StartWithAllTaxiMasks = "0">
 
 #########################################################################################################
 # Power regeneration multiplier setup
-# 
+#
 #    These directives set up the multiplier in which regen values will be
 #    multiplied by every 2 seconds.
-#    Powers: 
+#    Powers:
 #        Power1 = Mana, Power2 = Rage, Power3 = Energy
-#    
+#
 #    Reputation:
 #        Kill = Rep gained on kill, Quest = rep gained from quests
 #
@@ -262,7 +267,7 @@
 #        The xp that a player receives from killing a creature will be multiplied
 #        by this value in order to get his xp gain.
 #
-#    RestXP: 
+#    RestXP:
 #        Amount of hours needed to get one Bubble rested XP ( one bubble is 5% of the complete XP bar)
 #        Default is 8 hrs rest for one bubble. Raising this rate causes RestedXP to be earned faster,
 #        F.e, setting a rate of 2 makes you require only 4 hrs reesting for 1 bubble (instead of 8).
@@ -272,8 +277,8 @@
 #    Drop(Color):
 #        These values will be multiplied by the drop percentages of the items for creatures
 #        to determine which items to drop. All default to 1.
-#        To allow you better control of drops, separate multipliers have been created for items 
-#        of each quality group. 
+#        To allow you better control of drops, separate multipliers have been created for items
+#        of each quality group.
 #
 #    DropMoney:
 #        This value will be multiplied by any gold looted and pickpocketed
@@ -284,7 +289,7 @@
 #    Save:
 #        Value in milliseconds (ms) that will be between player autosaves.
 #        Default: 300000 (5 minutes)
-# 
+#
 #    SkillChance:
 #        The chance that you have to level up a skill in melee or a profession is multiplied
 #        by this value.
@@ -299,34 +304,34 @@
 #
 #########################################################################################################
 
-<Rates Health="1"
-       Power1="1"
-       Power2="1"
-       Power3="1"
-       QuestReputation="1"
-       KillReputation="1"
-       Honor="1"
-       PvPTimer="300000"
-       Compression="1"
-       XP="1"
-       QuestXP="1"
-       RestXP="1"
-       DropGrey="1"
-       DropWhite="1"
-       DropGreen="1"
-       DropBlue="1"
-       DropPurple="1"
-       DropOrange="1"
-       DropArtifact="1"
-       DropMoney="1"
-       QuestMoney="1"
-       Save="300000"
-       SkillChance="1"
-       SkillRate="1"
-       ArenaMultiplier2x="1"
-       ArenaMultiplier3x="1"
-       ArenaMultiplier5x="1"
-       EOTSCaptureRate="1">
+<Rates Health = "1"
+       Power1 = "1"
+       Power2 = "1"
+       Power3 = "1"
+       QuestReputation = "1"
+       KillReputation = "1"
+       Honor = "1"
+       PvPTimer = "300000"
+       Compression = "1"
+       XP = "1"
+       QuestXP = "1"
+       RestXP = "1"
+       DropGrey = "1"
+       DropWhite = "1"
+       DropGreen = "1"
+       DropBlue = "1"
+       DropPurple = "1"
+       DropOrange = "1"
+       DropArtifact = "1"
+       DropMoney = "1"
+       QuestMoney = "1"
+       Save = "300000"
+       SkillChance = "1"
+       SkillRate = "1"
+       ArenaMultiplier2x = "1"
+       ArenaMultiplier3x = "1"
+       ArenaMultiplier5x = "1"
+       EOTSCaptureRate = "1">
 
 #########################################################################################################
 # GM Client Channel
@@ -357,7 +362,7 @@
 
 #########################################################################################################
 # Log Settings
-# 
+#
 #    Cheaters:
 #        This directive sets up the cheater logging file, if turned on any
 #        cheat / packet exploit / speedhack attempts will be logged here.
@@ -375,14 +380,14 @@
 #
 #    These directives control the limits and behaviour of the ingame mail system.
 #    All options must have Mail prefixed before them.
-#   
-#    ReloadDelay                 
+#
+#    ReloadDelay
 #        Controls the delay at which the database is "refreshed". Use it if you're
 #        inserting mail from an external source, such as a web-based interface.
 #        0 turns it off.
 #        Default: 0
 #
-#    DisablePostageCostsForGM 
+#    DisablePostageCostsForGM
 #        Enables/disables the postage costs for GM's. DisablePostageCosts overrides this.
 #        Default: 1
 #
@@ -395,7 +400,7 @@
 #        Default: 1
 #
 #    DisableMessageExpiry
-#        Turns off the 30 day / 3 day after read message expiry time. 
+#        Turns off the 30 day / 3 day after read message expiry time.
 #        WARNING: A mailbox still cannot show more than 50 items at once
 #        (stupid limitation in client).
 #        Default: 0
@@ -404,11 +409,11 @@
 #        Removes the faction limitation for sending mail messages. Applies to all players.
 #        Default: 1
 #
-#    EnableInterfactionMailForGM 
+#    EnableInterfactionMailForGM
 #        Removes the faction limitation for sending mail messages, but only applies
 #        to GM's. EnableInterfactionMail overrides this.
 #        Default: 1
-#   
+#
 #########################################################################################################
 
 <Mail ReloadDelay="0"
@@ -488,7 +493,7 @@
 #########################################################################################################
 # LogonServer Setup
 #
-#    DisablePings   
+#    DisablePings
 #        This directive controls whether pings will be sent to the logonserver to check
 #        if the connection is still "alive". Expect problems if it is disabled.
 #        Default: 0
@@ -507,7 +512,7 @@
 #########################################################################################################
 # AntiHack Setup
 #
-#    Teleport   
+#    Teleport
 #        This directive controls anti-teleport hack checks will be enabled or not.
 #        Default: 1
 #
