--- a/contrib/conf/ClusterServer.conf
+++ b/contrib/conf/ClusterServer.conf
@@ -3,16 +3,64 @@
 #########################################################################################################
 # Database Section
 #
-#	Database.Host		- The hostname that the database is located on
-#	Database.Username	- The username used for the mysql connection
-#	Database.Password	- The password used for the mysql connection
-#	Database.Name		- The database name
-#	Database.Port		- Port that MySQL listens on. Usually 3306.
+#	Database.Host       - The hostname that the database is located on
+#	Database.Username   - The username used for the mysql connection
+#	Database.Password   - The password used for the mysql connection
+#	Database.Name       - The database name
+#	Database.Port       - Port that MySQL listens on. Usually 3306.
 #
 #########################################################################################################
 
 <WorldDatabase Hostname = "localhost" Username = "username" Password = "password" Name = "dbname" Port = "3306">
 <CharacterDatabase Hostname = "localhost" Username = "username" Password = "password" Name = "dbname" Port = "3306">
+
+#########################################################################################################
+# Log Level Setup
+#
+#    World
+#        If this directive is turned on, a file called `world.log`
+#        will be created in the server's directory and all packets
+#        sent and received by clients will be dumped here in bfg
+#        format.
+#        Default: 0
+#
+#    WorldXml
+#        If this directive is turned on, a file called `world.xml`
+#        will be created in the server's directory and all packets
+#        sent and received by clients will be dumped here in xml
+#        format.
+#        Default: 0
+#
+#    Screen
+#        Set the logging level:
+#        -1 Disabled
+#        0 String level
+#        1 Error level
+#        2 Detail level
+#        3 Debug level
+#        Default: -1
+#
+#    File
+#        Set the logging level:
+#        Levels same as Screen ones
+#        Default: -1
+#
+#########################################################################################################
+
+<LogLevel World = "0" WorldXml = "0" Screen = "-1" File = "-1">
+
+#########################################################################################################
+# Server Settings
+#
+#    Seperate Channels Control
+#        This directive controls whether horde and alliance chats will be seperated across channels.
+#        Set to 1 for blizzlike seperated channels, or 0 to allow horde/alliance to speak to each other
+#        across channels.
+#        Default: 0
+#
+#########################################################################################################
+
+<Server SeperateChatChannels = "0">
 
 #########################################################################################################
 # Host Directive
