* modified method WorldSession::HandleAuctionSellItem * modified method const static uint32 GetBGMapID * modified method const static CreateBattlegroundFunc GetBGCFunc * modified enum BattleGroundTypes * modified CommandTableStorage::getSingleton().Init(); ---> sComTableStore.Init(); * modified method CommandTableStorage::getSingleton().Dealloc(); ---> sComTableStore.Dealloc(); * modified method CommandTableStorage::getSingleton().Load(); ---> sComTableStore.Load(); * modified method ChatHandler::HandleModifyLevelCommand * added for conf Battleground Enable Setup

--- a/contrib/conf/WorldServer.conf
+++ b/contrib/conf/WorldServer.conf
@@ -670,3 +670,27 @@
 #########################################################################################################
 
 <DeathKnight OnePerRealm="1" RequiredLevel="55">
+
+#########################################################################################################
+# Battleground Enable Setup
+#
+#    WinterGrasp
+#        Enables all of WG, it might reduce server lag to have it disabled.
+#    Generic
+#        Enables the BG.
+#
+#########################################################################################################
+
+<Battlegrounds Enable_WG = "0"
+        Enable_AV = "1"
+        MinPlayers_AV = "20"
+        Enable_WSG = "1"
+        MinPlayers_WSG = "5"
+        Enable_AB = "1"
+        MinPlayers_AB = "7"
+        Enable_EOTS = "1"
+        MinPlayers_EOTS = "7"
+        Enable_SOTA = "1"
+        MinPlayers_SOTA = "15"
+        Enable_IOC = "1"
+        MinPlayers_IOC = "15">
