* Implemented basic MMap functions....
Signed-off-by: schnek <tolstikov.misha@gmail.com>

--- a/contrib/conf/WorldServer.conf
+++ b/contrib/conf/WorldServer.conf
@@ -352,13 +352,15 @@
 #   often. Instance/Non-main maps will not be unloaded ever.
 #
 #   Default:
+#      UseMmaps = "0"
 #      MapPath = "maps"
 #      vMapPath = "vmaps"
-#      UnloadMaps = 1
+#      MMapPath = "mmaps"
+#      UnloadMaps = "1"
 #
 #########################################################################################################
 
-<Terrain MapPath = "maps" vMapPath = "vmaps" UnloadMaps = "1">
+<Terrain UseMmaps MapPath = "maps" vMapPath = "vmaps" MMapPath = "mmaps" UnloadMaps = "0">
 
 #########################################################################################################
 # Log Settings
