--- a/win/VC100/libs.vcxproj
+++ b/win/VC100/libs.vcxproj
@@ -293,6 +293,33 @@
     <ClInclude Include="..\..\src\libs\Auth\MD5.h" />
     <ClInclude Include="..\..\src\libs\Auth\Sha1.h" />
     <ClInclude Include="..\..\src\libs\Auth\WowCrypt.h" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\ChunkyTriMesh.cpp" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\ChunkyTriMesh.h" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\InputGeom.cpp" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\InputGeom.h" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\MeshLoaderObj.cpp" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\MeshLoaderObj.h" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\Detour\DetourCommon.cpp" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\Detour\DetourCommon.h" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\Detour\DetourNavMesh.cpp" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\Detour\DetourNavMesh.h" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\Detour\DetourNavMeshBuilder.cpp" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\Detour\DetourNavMeshBuilder.h" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\Detour\DetourNode.cpp" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\Detour\DetourNode.h" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\Recast.cpp" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\Recast.h" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastArea.cpp" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastContour.cpp" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastFilter.cpp" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastLog.cpp" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastLog.h" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastMesh.cpp" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastMeshDetail.cpp" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastRasterization.cpp" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastRegion.cpp" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastTimer.cpp" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastTimer.h" />
     <ClInclude Include="..\..\src\libs\Collision\LocationVector.h" />
     <ClInclude Include="..\..\src\libs\Collision\vmap\AABSPTree.h" />
     <ClInclude Include="..\..\src\libs\Collision\vmap\BaseModel.h" />
