--- a/win/VC100/libs.vcxproj
+++ b/win/VC100/libs.vcxproj
@@ -272,6 +272,23 @@
     <ClCompile Include="..\..\src\libs\Network\SocketMgrWin32.cpp" />
     <ClCompile Include="..\..\src\libs\Network\SocketOpsWin32.cpp" />
     <ClCompile Include="..\..\src\libs\Network\SocketWin32.cpp" />
+    <ClCompile Include="..\..\src\libs\Pathfinding\ChunkyTriMesh.cpp" /> 
+    <ClCompile Include="..\..\src\libs\Pathfinding\Detour\DetourCommon.cpp" /> 
+    <ClCompile Include="..\..\src\libs\Pathfinding\Detour\DetourNavMesh.cpp" /> 
+    <ClCompile Include="..\..\src\libs\Pathfinding\Detour\DetourNavMeshBuilder.cpp" /> 
+    <ClCompile Include="..\..\src\libs\Pathfinding\Detour\DetourNode.cpp" /> 
+    <ClCompile Include="..\..\src\libs\Pathfinding\InputGeom.cpp" /> 
+    <ClCompile Include="..\..\src\libs\Pathfinding\MeshLoaderObj.cpp" /> 
+    <ClCompile Include="..\..\src\libs\Pathfinding\Recast\Recast.cpp" /> 
+    <ClCompile Include="..\..\src\libs\Pathfinding\Recast\RecastArea.cpp" /> 
+    <ClCompile Include="..\..\src\libs\Pathfinding\Recast\RecastContour.cpp" /> 
+    <ClCompile Include="..\..\src\libs\Pathfinding\Recast\RecastFilter.cpp" /> 
+    <ClCompile Include="..\..\src\libs\Pathfinding\Recast\RecastLog.cpp" /> 
+    <ClCompile Include="..\..\src\libs\Pathfinding\Recast\RecastMesh.cpp" /> 
+    <ClCompile Include="..\..\src\libs\Pathfinding\Recast\RecastMeshDetail.cpp" /> 
+    <ClCompile Include="..\..\src\libs\Pathfinding\Recast\RecastRasterization.cpp" /> 
+    <ClCompile Include="..\..\src\libs\Pathfinding\Recast\RecastRegion.cpp" /> 
+    <ClCompile Include="..\..\src\libs\Pathfinding\Recast\RecastTimer.cpp" /> 
     <ClCompile Include="..\..\src\libs\Threading\Mutex.cpp" />
     <ClCompile Include="..\..\src\libs\Threading\ThreadPool.cpp" />
     <ClCompile Include="..\..\src\libs\Getopt.cpp" />
@@ -293,33 +310,6 @@
     <ClInclude Include="..\..\src\libs\Auth\MD5.h" />
     <ClInclude Include="..\..\src\libs\Auth\Sha1.h" />
     <ClInclude Include="..\..\src\libs\Auth\WowCrypt.h" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\ChunkyTriMesh.cpp" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\ChunkyTriMesh.h" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\InputGeom.cpp" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\InputGeom.h" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\MeshLoaderObj.cpp" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\MeshLoaderObj.h" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\Detour\DetourCommon.cpp" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\Detour\DetourCommon.h" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\Detour\DetourNavMesh.cpp" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\Detour\DetourNavMesh.h" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\Detour\DetourNavMeshBuilder.cpp" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\Detour\DetourNavMeshBuilder.h" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\Detour\DetourNode.cpp" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\Detour\DetourNode.h" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\Recast.cpp" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\Recast.h" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastArea.cpp" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastContour.cpp" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastFilter.cpp" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastLog.cpp" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastLog.h" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastMesh.cpp" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastMeshDetail.cpp" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastRasterization.cpp" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastRegion.cpp" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastTimer.cpp" />
-    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastTimer.h" />
     <ClInclude Include="..\..\src\libs\Collision\LocationVector.h" />
     <ClInclude Include="..\..\src\libs\Collision\vmap\AABSPTree.h" />
     <ClInclude Include="..\..\src\libs\Collision\vmap\BaseModel.h" />
@@ -378,6 +368,16 @@
     <ClInclude Include="..\..\src\libs\Network\SocketDefines.h" />
     <ClInclude Include="..\..\src\libs\Network\SocketMgrWin32.h" />
     <ClInclude Include="..\..\src\libs\Network\SocketOps.h" />
+    <ClInclude Include="..\..\src\libs\Pathfinding\ChunkyTriMesh.h" /> 
+    <ClInclude Include="..\..\src\libs\Pathfinding\Detour\DetourCommon.h" /> 
+    <ClInclude Include="..\..\src\libs\Pathfinding\Detour\DetourNavMesh.h" /> 
+    <ClInclude Include="..\..\src\libs\Pathfinding\Detour\DetourNavMeshBuilder.h" /> 
+    <ClInclude Include="..\..\src\libs\Pathfinding\Detour\DetourNode.h" /> 
+    <ClInclude Include="..\..\src\libs\Pathfinding\InputGeom.h" /> 
+    <ClInclude Include="..\..\src\libs\Pathfinding\MeshLoaderObj.h" /> 
+    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\Recast.h" /> 
+    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastLog.h" /> 
+    <ClInclude Include="..\..\src\libs\Pathfinding\Recast\RecastTimer.h" /> 
     <ClInclude Include="..\..\src\libs\Threading\Condition.h" />
     <ClInclude Include="..\..\src\libs\CThreads.h" />
     <ClInclude Include="..\..\src\libs\Threading\Guard.h" />
